<resources>
    <string name="app_name">ClientSide</string>
    <string name="todo">TODO</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="signUp">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="worldworksolution">WorldWorkSolution</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_the_days_your_available_to_work">Select the days your available to work</string>
    <string name="sun">Sun</string>
    <string name="mon">mon</string>
    <string name="tue">Tue</string>
    <string name="wed">wed</string>
    <string name="thu">THU</string>

    <string name="sat">Sat</string>
    <string name="profilename">ProfileName</string>
    <string name="go_offline">GO OFFLINE</string>
    <string name="your_work_location">YOUR WORK LOCATION</string>
    <string name="dd_block_dha_phase_4_lahor_defence">DD block dha phase 4 lahor defence</string>
    <string name="within_10km_work_radius">Within 10km Work Radius</string>
    <string name="pending_jobs">PENDING JOBS</string>
    <string name="upcoming_jobs">UPCOMING JOBS</string>
    <string name="_0">0</string>
    <string name="zeeshan_ameer">Zeeshan Ameer</string>
    <string name="dd_block_dha_phase_4_lahore_defence">dd_block_dha_phase_4_lahore_defence</string>


</resources>
