<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".userProfile.UserAvailability">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/select_the_days_your_available_to_work"
            android:textColor="@color/colorblack"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">


            <Button
                android:id="@+id/sundayButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginStart="20dp"
                android:background="@drawable/availability_buttons"
                android:text="@string/sun"
                android:textColor="@drawable/availability_button_text_color" />

            <Button
                android:id="@+id/mondayButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginStart="50dp"
                android:background="@drawable/availability_buttons"
                android:text="@string/mon"
                android:textColor="@drawable/availability_button_text_color" />

            <Button
                android:id="@+id/tuesdayButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_marginStart="50dp"
                android:background="@drawable/availability_buttons"
                android:text="@string/tue"
                android:textColor="@drawable/availability_button_text_color" />

            <Button
                android:id="@+id/wednesdayButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_row="0"
                android:layout_column="3"
                android:layout_marginStart="50dp"
                android:background="@drawable/availability_buttons"
                android:text="@string/wed"
                android:textColor="@drawable/availability_button_text_color" />

            <Button
                android:id="@+id/thursdayButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/availability_buttons"
                android:text="@string/thu"
                android:textColor="@drawable/availability_button_text_color" />

            <Button
                android:id="@+id/fridaydayButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_marginStart="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/availability_buttons"
                android:text="@string/wed"
                android:textColor="@drawable/availability_button_text_color" />

            <Button
                android:id="@+id/SaturdayButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_marginStart="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/availability_buttons"
                android:text="@string/sat"
                android:textColor="@drawable/availability_button_text_color" />


        </GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>